--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,6 +17,14 @@ row-container
     margin: auto;
 }
 
+blogTitle
+{
+  display:flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center
+}
+
 textMiddle
 {
     display: flex;
@@ -63,6 +71,7 @@ text-center
   flex-wrap: nowrap;
   align-content: center;
   justify-content: center;
+  font-size: 17px;
   margin-left: 100px;
   margin-right: 100px;
 }
@@ -85,6 +94,8 @@ body
 h1
 {
   font-size: 30px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 h2
@@ -137,6 +148,13 @@ h3
   margin-right: 0px;
   }
 
+  h1
+  {
+    font-size: 30px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   h2
   {
   font-size: 20px;
@@ -144,7 +162,7 @@ h3
   margin-right: 0px;
   }
 
-h3
+  h3
   {
   font-size: 18px;
   margin-left: 0px;
