Added new blog post

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,9 +30,13 @@ textMiddle
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: space-around;
-    align-content: space-around;
+
+    justify-content: center;
+    align-content: center;
+
     text-align: center;
+    font-size: 20px;
+
     margin: 20px;
 }
 
@@ -41,9 +45,13 @@ textRight
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: space-around;
-  align-content: space-around;
+
+  justify-content: center;
+  align-content: center;
+
   text-align: center;
+  font-size: 20px;
+
   margin: 20px;
 }
 
@@ -70,7 +78,7 @@ text-center
   display: flex;
   flex-wrap: nowrap;
   align-content: center;
-  justify-content: center;
+  justify-content: left;
   font-size: 17px;
   margin-left: 100px;
   margin-right: 100px;
