--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,7 +59,7 @@ download
 {
   font-size: 25px;
   display: flex;
-  justify-content: stretch;
+  justify-content: center;
 }
 
 image-container
@@ -124,7 +124,7 @@ h3
 /* Responsive */
 /* -------------------------------------------------------------------------- */
 
-@media all and (max-width: 1000px) {
+@media all and (max-width: 1230px) {
   row-container
   {
     display: flex;
@@ -133,17 +133,6 @@ h3
     justify-content: space-around;
     align-content: space-around;  
     margin: auto;
-  }
-
-  image-container
-  {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-content: space-between;
-  margin: 0px;
-  padding: 20px;
   }
 
   text-center
@@ -177,6 +166,20 @@ h3
   margin-right: 0px;
   }
 
+}
+
+@media all and (max-width: 1230px) 
+{
+  image-container
+  {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  margin: 80px;
+  padding: 20px;
+  }
 }
 
 /* -------------------------------------------------------------------------- */
