--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,6 +73,13 @@ image-container
   padding: 20px;
 }
 
+img
+{
+  width:30%; 
+  margin:10px; 
+  align-self: center;
+}
+
 text-center
 {
   display: flex;
@@ -179,6 +186,13 @@ h3
   align-content: center;
   margin: 80px;
   padding: 20px;
+  }
+
+  img
+  {
+  width:70%; 
+  margin:10px; 
+  align-self: center;
   }
 }
 
